--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,20 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GUDLFT Registration</title>
-</head>
-<body>
-    <h1>Welcome to the GUDLFT Registration Portal!</h1>
-    Please enter your secretary email to continue:
-    <form action="showSummary" method="post">
-        <label for="email">Email:</label>
-        <input type="email" name="email" id=""/>
-        <button type="submit">Enter</button>
-    </form>
-</body>
-</html>
+<h1>Welcome to the GUDLFT Registration Portal!</h1>
+Please enter your secretary email to continue:
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <div>
+            <ul class="flashes">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+{% endwith %}
+
+<form action="showSummary" method="post">
+    <label for="email">Email:</label>
+    <input type="email" name="email" id=""/>
+    <button type="submit">Enter</button>
+</form>
